readarr/base/service.yml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "readarr"
spec:
  selector:
    app: "readarr"
  ports:
    - port: 8787
      name: "readarr-http"
      protocol: "TCP"
